--- a/index.html
+++ b/index.html
@@ -44,27 +44,25 @@
             <!-- div Header -->
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sup-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">
-                                Discover a place you'll love to live.
-                            </h1>
-                            <p class="desc">
-                                Get the best real estate deals first, before
-                                they hit the mass market! hot foreclosure deals
-                                with one simple search.
-                            </p>
-                            <a href="" class="btn hero-cta">More about Us</a>
-                        </div>
-
-                        <img
-                            src="./assets/img/house illustration.svg"
-                            alt="Discover a place
-                        you'll love to live."
-                            class="hero-img"
-                        />
+                    <div class="info">
+                        <p class="sup-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <p class="desc">
+                            Get the best real estate deals first, before they
+                            hit the mass market! hot foreclosure deals with one
+                            simple search.
+                        </p>
+                        <a href="#!" class="btn hero-cta">More about Us</a>
                     </div>
+
+                    <img
+                        src="./assets/img/house illustration.svg"
+                        alt="Discover a place
+                        you'll love to live."
+                        class="hero-img"
+                    />
                 </div>
             </div>
 
