--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
-        <title>Project 01 Landing Page</title>
+        <title>Landing Page</title>
         <!-- favicon -->
         <link
             rel="apple-touch-icon"
